--- a/internship.html
+++ b/internship.html
@@ -41,12 +41,32 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://gowago.join.com/jobs/469234-business-development-intern-at-fast-growing-startup'>Job @ GOWAGO (Z?rich): Business Development intern... | JOIN</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/harrisonrush/job/shmiex6gtfxb849t9b7pxib9ar'>Senior Vice President/ Director - Internet, Fin Tech, Software  | The Harrison Rush Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tetratech.referrals.selectminds.com/jobs/engineering-assistant-intern-new-orleans-15829'>Engineering Assistant Intern - New Orleans - Tetra Tech Careers</a></h5> 
+<h5><a href='https://lockton.referrals.selectminds.com/jobs/intern-1898'>Intern - Lockton Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://lockton.referrals.selectminds.com/jobs/analytics-intern-1838'>Analytics Intern - Lockton Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://definityfirst.applytojob.com/apply/FCb3FNpewk/Dynamics-CRM-Dev-Internship'>Dynamics CRM Dev Internship - Definity First - Career Page</a></h5> 
+<p><span class="badge badge-light">Mexico</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/ocrsbfw0'>Eidos Montr?al Careers - Stagiaire, Programmeur Technologie / Intern Technology Programmer</a></h5> 
+<p><span class="badge badge-light">Montreal</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://gowago.join.com/jobs/469234-business-development-intern-at-fast-growing-startup'>Job @ GOWAGO (Z?rich): Business Development intern... | JOIN</a></h5> 
+<p><span class="badge badge-light">Z?rich, Switzerland  Z?rich, Switzerland</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://tetratech.referrals.selectminds.com/jobs/engineering-assistant-intern-new-orleans-15829'>Engineering Assistant Intern - New Orleans - Tetra Tech Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/HuaweiTechnologiesCanadaCoLtd/743999698594184-computer-vision-research-intern'>Huawei Technologies Canada Co., Ltd. Computer Vision Research Intern | SmartRecruiters</a></h5> 
@@ -107,11 +127,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.municipalworld.com/careers/engineering-intern-water/'>Engineering Intern (Water) - Region of Waterloo - Municipal World</a></h5> 
+<h5><a href='https://www.municipalworld.com/careers/engineering-intern-water/'>Engineering Intern (Water) - Region of Waterloo - Municipal World</a></h5> 
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -135,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SchnabelFoundationCompany/743999698578295-fall-winter-2020-geostructural-engineering-internship'>Schnabel Foundation Company Fall / Winter 2020 GeoStructural Engineering Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SchnabelFoundationCompany/743999698578295-fall-winter-2020-geostructural-engineering-internship'>Schnabel Foundation Company Fall / Winter 2020 GeoStructural Engineering Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -259,7 +279,7 @@
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.applythis.net/job/?a=721A83367.0'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=721A83367.0'>
 	
     Apply for Systems Development Manager -  Bolton, United Kingdom - IT and Internet - Syst-Fpukle-Laura - Find a job, build a career
 
@@ -283,7 +303,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698560977-internship-in-the-purchasing-project-management'>Bosch Group Internship in the Purchasing Project Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698560977-internship-in-the-purchasing-project-management'>Bosch Group Internship in the Purchasing Project Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -307,7 +327,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558422-revenue-management-pricing-intern-6-months-'>BlaBlaCar Revenue Management & Pricing Intern (6 months) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558422-revenue-management-pricing-intern-6-months-'>BlaBlaCar Revenue Management & Pricing Intern (6 months) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -387,7 +407,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://goldcorp.referrals.selectminds.com/jobs/intern-digital-communications-2102'>Intern, Digital Communications - Goldcorp Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://goldcorp.referrals.selectminds.com/jobs/intern-digital-communications-2102'>Intern, Digital Communications - Goldcorp Careers</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -443,26 +463,6 @@
 <hr/>
 <h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20166'>Corporate Intern - Gallagher Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20167'>Corporate Intern - Gallagher Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/loft/0e371604-98a4-4c04-95aa-6ceaa9e33a03'>Loft - FP&A Intern</a></h5> 
-<p><span class="badge badge-light">S?o Paulo Brazil</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/loft/be2c87c7-6032-4691-9db8-15553fd4c7b2'>Loft - Investor Relations Intern</a></h5> 
-<p><span class="badge badge-light">S?o Paulo Brazil</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698541323--internship-accounting-intern'>Bosch Group [Internship] Accounting Intern | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Ho Chi Minh Vietnam  Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
